# Tlang

./: CMakeLists.txt  README.md  file.kl  file.tl  go.mod  main.tl  output.tl
include/: tokenize.cpp  tokenize.hpp
src/: main  main.cpp  main.go
